--- a/study-in-canada.html
+++ b/study-in-canada.html
@@ -165,28 +165,26 @@
                         <h1 class="mb-5">One’s destination is never a place, but a new way of seeing things</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_canada.jpg"
                             alt="Image">
-                        <p>Singapore is a top destination for international students looking to pursue higher education.
-                            The city-state is known for its excellent education system, world-class universities, and
-                            diverse multicultural society.
-
-                            There are many benefits to studying in Singapore including the opportunity to learn from
-                            highly qualified professors, access to state-of-the-art facilities, and exposure to a
-                            dynamic and thriving economy. Additionally, Singapore is a safe and welcoming country that
-                            offers a high quality of life for students.
-
-                            Some of the top universities in Singapore include the National University of Singapore,
-                            Nanyang Technological University, and Singapore Management University. These universities
-                            offer a wide range of programs in various fields such as engineering, business, law, and
-                            medicine.
-
-                            International students who wish to study in Singapore can apply for scholarships and
-                            financial aid to help cover the cost of tuition and living expenses. There are also many
-                            resources available to assist students with the visa application process and settling into
-                            life in Singapore.
-
-                            Overall, studying in Singapore is a fantastic opportunity for students who are looking to
-                            gain a world-class education, experience a new culture, and prepare for a successful career
-                            in the global marketplace.</p>
+                        <h3 class="mb-4">Study In Canada Overview</h3>
+                        <p>Canada Study Visa Consultants. Canada is the second largest Country in the World. Highest
+                            Industrialized Countries of the world. Canada has ranked 35th in population with 35 million
+                            people in the country.</p>
+                        <p>Canada has worldwide reputation as quality education as quality education provider. Canada
+                            also has one of the fastest growing economies of the world. Canada ranks among the 10
+                            leading manufacturing nations and has also experienced tremendous growth in the technology
+                            and service industries. Canadian degrees and diploma are recognized throughout the world.
+                            Canadian work experience is highly desirable by multi - national companies who actively
+                            recruit on Canadian campuses. Canada’s pedagogy is Mainly focuses on theoretical and
+                            practical aspects, and the country is globally known for its research infrastructure and
+                            facilities.
+                            <u>
+                                <li>High Visa Success Rate Under SPP</li>
+                                <li>Easy & Fast Student Visa Process</li>
+                                <li>1 - 3 Years Work Permit After Study [PGWPP]</li>
+                                <li>High Chance of Permanent Residency After Study</li>
+                                <li>Co-op Options [ Internship ] in Many Courses</li>
+                            </u>
+                        </p>
 
 
                     </div>
@@ -330,33 +328,30 @@
 
                 <div class="col-lg-12">
                     <div class="mb-5">
-                        <h2 class="mb-5">Why Study in Singapore ?</h2>
-                        <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;" src="img/singapore/about-singapore.jpg"
-                            alt="Image">
-                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
-                            reputation as
-                            a world-class education hub. There are several reasons why students from around the globe
-                            choose to study in Singapore.
-                            Firstly, Singapore has a strong education system with highly respected universities and
-                            institutions. The country consistently ranks high in global education rankings, and its
-                            universities are recognized for their academic excellence, research capabilities, and
-                            innovative teaching methods.
-                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
-                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
-                            and languages while studying in Singapore. This international exposure can broaden their
-                            horizons and enhance their global perspectives.
+                        <h2 class="mb-4">Why Study In Canada?</h2>
+                        <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
+                            src="img/singapore/about-singapore.jpg" alt="Image">
+                        <p class="">Canada is a developed country which has the highest nominal per capita income
+                            throughout the world, and it is the eighth highest ranking in the Human Development Index
                         </p>
-                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
-                            of security for students, making it an ideal destination to study abroad. The country's
-                            efficient public transport system and well-developed infrastructure also make it easy for
-                            students to navigate the city and explore its attractions.
-                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
-                            students interested in entrepreneurship and start-ups. The country's strong economy,
-                            favorable business environment, and supportive government policies create opportunities for
-                            students to gain valuable experience and make connections with like-minded individuals.
-                            All in all, studying in Singapore offers students a unique and rewarding experience that can
-                            enhance their academic and personal growth.
+
+                        <h4 class="mb-4">Quality of Life</h4>
+                        <p>Canadians and international students in Canada enjoy a high standard of living. It’s a great
+                            place to live and work. In fact, Canada ranks #1 in the world when it comes to quality of
+                            life. According to the World University Rankings, Canada also has 4 of the top 100 best
+                            student cities in the world.
                         </p>
+                        <h4 class="mb-4">Path to a promising future</h4>
+                        <p>Canada has researched graduate outcomes for the students—both domestic and international—for
+                            years and the outcome is that Canadian college and university students graduate with a
+                            strong earning potential. That’s because it positions them for a successful future and
+                            rewarding careers. In the last decade alone, Canada created 1.8 million new jobs for
+                            graduates.</p>
+                        <h4 class="mb-4">Learn with the best and brightest</h4>
+                        <p>Canada is recognized worldwide for its outstanding quality of education—from elementary
+                            school to post-secondary studies. The educators are highly trained and bring diverse
+                            perspectives to the classroom. At the university level, 2 out of every 5 academics hold at
+                            least 1 international degree. And it has 11 of the top 250 universities worldwide.</p>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -391,39 +386,27 @@
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class=" text-align: justify mt-5">
-                            <h2 class="mb-3 text-center">Singapore student Visa Application</h2>
+                            <h2 class="mb-3 text-center">Post Study Work Options In Canada</h2>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
                                 src="img/singapore/singapore-visa.jpg" alt="Image">
-                            <p>After receiving the confirmation letter of admission from a desired institute, students
-                                need to apply for a student pass to enter Singapore. Institutes in Singapore will file
-                                the Singapore student pass for Indian application on behalf of the student to Singapore
-                                immigration and checkpoint Authority (ICA). Normally it will take 2 – 3 weeks to get the
-                                Singapore study visa pass.
+                            <p>The Canadian government offers options for international students to stay after their
+                                course and gain some work experience. The Immigration, Refugees, and Citizenship Canada
+                                (IRCC) provides the Post-Graduate Work Permit Program. Under this program, international
+                                graduates can get an open work permit valid for three years. With this permit Canadian
+                                employers can work for any employer without the need of having a job offer before making
+                                an application.
                             </p>
-                            <h4 class="mb-3">Documents Required For Singapore Student Visa</h4>
-                            <p>
-                                Singapore student pass requirements for Indian in same order as given hereunder:
+                            <h4 class="mb-3">How Can We Help You</h4>
+                            
                             <ul>
-                                <li>International student application form</li>
-                                <li>Passport</li>
-                                <li>One Passport size photo (less than 6 months old)</li>
-                                <li>Visa application fee</li>
-                                <li>Bank Statements – ORIGINAL for the last 28 days from all sponsors</li>
-                                <li>Transcripts (Mark sheets -from 10th class till the last degree obtained)</li>
-                                <li>Affidavit of Support to be given by the sponsor on Rs.20 stamp paper (non-judicial)
-                                </li>
-                                <li>Work experience certificate</li>
-                                <li>Fixed Deposit Receipts (if necessary)</li>
-                                <li>Bank loan sanction letter (if necessary)</li>
-                            </ul>
-                            Applicants are encouraged to apply at least 2 months before the commencement of the course.
-
-                            If the required documents are not in the English language, officially translated versions,
-                            as well as copies in the original language, are required.
-                            </p>
+                                <li>Advise you on the documentation that will be required for the visa</li>
+                                <li>Advise you on how the funds needed for the visa need to be shown</li>
+                                <li>Complete the application process</li>
+                                <li>Review your documents needed for the visa application</li>
+                                
                         </div>
                     </div>
-                </div>
+                </div
 
 
 
