--- a/study-in-australia.html
+++ b/study-in-australia.html
@@ -165,28 +165,20 @@
                         <h1 class="mb-5">It’s a big world out there, it would be a shame not to experience it</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_Australia .jpg"
                             alt="Image">
-                        <p>Singapore is a top destination for international students looking to pursue higher education.
-                            The city-state is known for its excellent education system, world-class universities, and
-                            diverse multicultural society.
-
-                            There are many benefits to studying in Singapore including the opportunity to learn from
-                            highly qualified professors, access to state-of-the-art facilities, and exposure to a
-                            dynamic and thriving economy. Additionally, Singapore is a safe and welcoming country that
-                            offers a high quality of life for students.
-
-                            Some of the top universities in Singapore include the National University of Singapore,
-                            Nanyang Technological University, and Singapore Management University. These universities
-                            offer a wide range of programs in various fields such as engineering, business, law, and
-                            medicine.
-
-                            International students who wish to study in Singapore can apply for scholarships and
-                            financial aid to help cover the cost of tuition and living expenses. There are also many
-                            resources available to assist students with the visa application process and settling into
-                            life in Singapore.
-
-                            Overall, studying in Singapore is a fantastic opportunity for students who are looking to
-                            gain a world-class education, experience a new culture, and prepare for a successful career
-                            in the global marketplace.</p>
+                        <h1 class="mb-5">Study In Australia Overview</h1>
+                        <p>Did you know Australia has the third highest number of international students in the world
+                            behind only the United Kingdom and the United States despite having a population of only
+                            24.5 million? Australia is currently home to nearly 700,000 international students.</p>
+                        <p>This isn’t surprising when you are considering a Student visa for Australia. Australia is
+                            known for its diverse and welcoming people – there are so many reasons to consider studying
+                            in Australia.</p>
+                        <ul>
+                            <li>High Quality Education</li>
+                            <li>High Visa Success Rate Under SSVF</li>
+                            <li>Easy & Fast Student Visa Process</li>
+                            <li>2 Years Work Permit After Study [PSW]</li>
+                            <li>Permanent Residency Possible After Study</li>
+                        </ul>
 
 
                     </div>
@@ -330,36 +322,46 @@
 
                 <div class="col-lg-12">
                     <div class="mb-5">
-                        <h2 class="mb-5">Why Study in Singapore ?</h2>
+                        <h2 class="mb-5">Why Study In Australia?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
                             src="img/singapore/about-singapore.jpg" alt="Image">
-                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
-                            reputation as
-                            a world-class education hub. There are several reasons why students from around the globe
-                            choose to study in Singapore.
-                            Firstly, Singapore has a strong education system with highly respected universities and
-                            institutions. The country consistently ranks high in global education rankings, and its
-                            universities are recognized for their academic excellence, research capabilities, and
-                            innovative teaching methods.
-                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
-                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
-                            and languages while studying in Singapore. This international exposure can broaden their
-                            horizons and enhance their global perspectives.
+                        <p class="">The Australian education system has produced scientists, designers, educators,
+                            entrepreneurs, artists and humanitarians who have changed the world. Their global
+                            achievements include the “black box” now on every airplane, the Earth hour initiative, and
+                            the invention of Wi-Fi. The Australian Government has invested over A$300 million in
+                            scholarships for international students.
                         </p>
-                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
-                            of security for students, making it an ideal destination to study abroad. The country's
-                            efficient public transport system and well-developed infrastructure also make it easy for
-                            students to navigate the city and explore its attractions.
-                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
-                            students interested in entrepreneurship and start-ups. The country's strong economy,
-                            favorable business environment, and supportive government policies create opportunities for
-                            students to gain valuable experience and make connections with like-minded individuals.
-                            All in all, studying in Singapore offers students a unique and rewarding experience that can
-                            enhance their academic and personal growth.
+
+                        <h4 class="mb-4">Study at globally ranked institutions</h4>
+                        <p>Australia is setting international standards for excellence in education. The Australian
+                            education sector comprises world-leading education institutions, premium training
+                            facilities, and outstanding lecturers and student support services.
+
+                            Look at independent global rankings such as Times Higher Education, QS and Shanghai
+                            Rankings. These organizations consistently rank Australian institutions in the world’s top
+                            100 universities year after year.
+                        </p>
+
+                        <h4 class="mb-4">Gain work experience while you study</h4>
+                        <p>You may choose to work in Australia while you are studying. This can be an option for you to
+                            earn some extra spending money, and gain valuable skills and experience.
+
+                            There are currently no restrictions on work for international students. This means that
+                            international students can work before their course commences and work more than 40 hours a
+                            fortnight in any sector of the economy. These temporary measures remain in place until
+                            further notice.
+
+                        </p>
+
+                        <h4 class="mb-4">One of the best higher education systems in the world</h4>
+                        <p>With over 22,000 courses across 1,100 institutions, the Australian education system is ranked
+                            8th in the Universitas 2019 U21 Ranking of National Higher Education Systems, higher than
+                            France, Germany, Norway and Japan.
+
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                     <div class="mb-4">
                         <div class="text-center mb-5">
                             <h2 class="mb-4">Singapore Culture</h2>
@@ -386,40 +388,29 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class=" text-align: justify mt-5">
-                            <h2 class="mb-3 text-center">Singapore student Visa Application</h2>
+                            <h2 class="mb-3 text-center">Employment Opportunities In Australia</h2>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
                                 src="img/singapore/singapore-visa.jpg" alt="Image">
-                            <p>After receiving the confirmation letter of admission from a desired institute, students
-                                need to apply for a student pass to enter Singapore. Institutes in Singapore will file
-                                the Singapore student pass for Indian application on behalf of the student to Singapore
-                                immigration and checkpoint Authority (ICA). Normally it will take 2 – 3 weeks to get the
-                                Singapore study visa pass.
+                            <p>Working while studying is one of the major reasons why a large number of international
+                                students choose Australia as their study destination.
                             </p>
-                            <h4 class="mb-3">Documents Required For Singapore Student Visa</h4>
-                            <p>
-                                Singapore student pass requirements for Indian in same order as given hereunder:
-                            <ul>
-                                <li>International student application form</li>
-                                <li>Passport</li>
-                                <li>One Passport size photo (less than 6 months old)</li>
-                                <li>Visa application fee</li>
-                                <li>Bank Statements – ORIGINAL for the last 28 days from all sponsors</li>
-                                <li>Transcripts (Mark sheets -from 10th class till the last degree obtained)</li>
-                                <li>Affidavit of Support to be given by the sponsor on Rs.20 stamp paper (non-judicial)
-                                </li>
-                                <li>Work experience certificate</li>
-                                <li>Fixed Deposit Receipts (if necessary)</li>
-                                <li>Bank loan sanction letter (if necessary)</li>
-                            </ul>
-                            Applicants are encouraged to apply at least 2 months before the commencement of the course.
 
-                            If the required documents are not in the English language, officially translated versions,
-                            as well as copies in the original language, are required.
+                            <p>
+                                The Australian Immigration system provides international students on a student visa a
+                                chance to work up to 40 hours every two weeks during semesters and unrestricted hours
+                                during semester breaks.
+                            <ul>
+                                <li>Retail Stores – Supermarkets, Department Stores and Clothing Stores</li>
+                                <li>Hotel and restaurant business – cafes, bars and restaurants</li>
+                                <li>Tourism – Hotels</li>
+                                
+                            </ul>
+                            
                             </p>
                         </div>
                     </div>
