--- a/study-in-canada.html
+++ b/study-in-canada.html
@@ -354,7 +354,7 @@
                             least 1 international degree. And it has 11 of the top 250 universities worldwide.</p>
                     </div>
                 </div>
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                     <div class="mb-4">
                         <div class="text-center mb-5">
                             <h2 class="mb-4">Singapore Culture</h2>
@@ -381,7 +381,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-12">
                     <div class="mb-4">
