--- a/tours.html
+++ b/tours.html
@@ -353,21 +353,21 @@
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
-                            <h1>Meet Our clients</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Travel</h5>
+                            <h1>Tours & Travel</h1>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/singapore.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
+                                                    class="fab fa-youtube"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -379,14 +379,14 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/cyprus.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
+                                                    class="fab fa-youtube"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -398,14 +398,14 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-3.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/france.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
+                                                    class="fab fa-youtube"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -417,14 +417,14 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-4.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/ireland.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
+                                                    class="fab fa-youtube"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
